- update openapi 3.0 documentation - add new module for api's. Add new api's - update and add data base models and version - add new schemas
